css/css-transitions/KeyframeEffect-setKeyframes.tentative.html is a failure (part 2) https://bugs.webkit.org/show_bug.cgi?id=235077

Reviewed by Dean Jackson.

LayoutTests/imported/w3c:

Mark WPT progression, this test now passes entirely.

* web-platform-tests/css/css-transitions/KeyframeEffect-setKeyframes.tentative-expected.txt:

Source/WebCore:

There were a few issues that prevented the final subtest in this WPT from passing
after the fix made in bug 235062.

First, while we must flush pending style changes for some of the Web Animations APIs
when called on a style-originated animation (CSS Transition or CSS Animation), this
should not apply to setters, only getters. In the context of this test, it was critical
that either setting keyframes or setting the current time not force pending style changes
to be flushed or a reversing CSS Transition may be started too soon and the test would
fail.

Second, when the spec says to use the "the current value of the property in the running
transition", it is equivalent to using the before-change style since we updated the
current value of all animations targeting this element, not getting the value from the
last time this transition was resolved since this would not account for any API calls
or style changes since then, which is precisely what this test is checking.

* animation/DeclarativeAnimation.cpp:
(WebCore::DeclarativeAnimation::setBindingsStartTime): Deleted.
(WebCore::DeclarativeAnimation::setBindingsCurrentTime): Deleted.
* animation/DeclarativeAnimation.h:
* animation/KeyframeEffect.cpp:
(WebCore::KeyframeEffect::setBindingsKeyframes):
* style/Styleable.cpp:
(WebCore::updateCSSTransitionsForStyleableAndProperty):



Canonical link: https://commits.webkit.org/245934@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287896 268f45cc-cd09-0410-ab3c-d52691b4dbfc